--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ insurance2/!**/src/test/**/build/
 ### VS Code ###
 insurance2/.vscode/
 
-insurance2/src/.test/
-insurance2/src/main/.resources/
+insurance2/src/.test/*
+insurance2/src/main/.resources/*
 
 insurance2/pom.xml
 insurance2/mvnw.cmd
