--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 server.error.include-stacktrace=always
+
+insurance2/src/main/resources/application
+
+
+
+insurance2/src/main/resources/application.properties
