--- a/insurance2/.gitignore
+++ b/insurance2/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+insurance2/src/main/resources/application
+
+
+
+insurance2/src/main/resources/application.properties
